[package]
name = "kaleidoscope"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[dependencies]
logos = "0.11.4"
salsa = "0.15.1"
smol_str = "0.1.16"
codespan-reporting = "0.9.5"
lasso = { version = "0.3.1", features = ["multi-threaded"] }
pretty = "0.10.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "llvm10-0" }

# Repl stuff
rustyline = "6.2.0"
rustyline-derive = "0.3.1"
ansi_term = "0.12.1"
ordered-float = "2.0.0"
